Folder structure reorganization and renaming. Products CRUD Endpoints creation and personalized errors handling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pydantic-mongo = "^2.3.0"
 fastapi-jwt = {extras = ["authlib"], version = "^0.3.0"}
 passlib = "^1.7.4"
 bcrypt = "^4.2.0"
+uvicorn = "^0.32.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
